infrastructure/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usersvc-deployment
  labels:
    app: usersvc-rest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usersvc-rest
  template:
    metadata:
      labels:
        app: usersvc-rest
    spec:
      containers:
      - name: usersvc-rest
        image: reph05/usersvc-rest:latest
        ports:
        - containerPort: 3000
          name: http-rest
      - name: usersvc-db
        image: postgres:16
        ports:
        - containerPort: 5432
          name: http-db
      imagePullSecrets:
      - name: regcred
