infrastructure/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: usersvc-rest-service
spec:
  type: NodePort
  selector:
    app: usersvc-rest
  ports:
  - name: usersvc-rest-port
    protocol: TCP
    targetPort: http-rest
    port: 3000
    nodePort: 30007
  - name: usersvc-db-port
    protocol: TCP
    targetPort: http-db
    port: 5432
    nodePort: 30008
